added business-user relation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	                <ul class="nav navbar-nav">
 	                    <li>
-	                        <%= link_to "New Post", new_post_path %>
+	                        <%= link_to "New Business", new_business_path %>
 	                    </li>
 
 	                    <%- if current_user %>
