--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,17 @@
 	                        <%= link_to "New Post", new_post_path %>
 	                    </li>
 
-	                    <%- if current_user %>
+	                    <%- if current_user  %>
 	                    	<li>
 	                    		<%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %>
+	                    	</li>
+
+	                    	<li>
+	                    		<%- if info_exist %>
+	                    			<%= link_to "User Information", user_info_path(current_user.id) %>
+	                    		<% else %>
+	                    			<% link_to "Create User Information", new_user_info %>
+	                    		<% end %>
 	                    	</li>
 	                    <% else %>
 		                    <li>
