--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,9 +1,13 @@
 <% @businesses.each do |x| %>
-	<div class="white">
-	<%= image_tag x.image.url(:thumb) %>
-	<br>
-	<%= x.name %>
-	<br>
-	<%= link_to "More Details", business_path(x) %> 
+	<div class="business">
+		<div class="business_pic_holder">
+			<%= image_tag x.image.url(:thumb), :class => "business_image" %>
+		</div>
+		<div class="business_name">
+			<%= x.name %>
+		</div>
+		<div class="details_div">
+		<%= link_to "More Details", business_path(x) %> 
+		</div>
 	</div>
 <% end %>
