--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>sarpmis's Instagram</title>
+  <title>ProjectC</title>
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -19,13 +19,17 @@
 	                    <span class="icon-bar"></span>
 	                </button>
 	                <!-- <a class="navbar-brand" href="#">Start Bootstrap</a> -->
-	                <%= link_to "Instagram", root_url, class: "navbar-brand" %>
+	                <%= link_to "ProjectC", root_url, class: "navbar-brand" %>
 	            </div>
 	            <!-- Collect the nav links, forms, and other content for toggling -->
 	            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	                <ul class="nav navbar-nav">
 	                    <li>
 	                        <%= link_to "New Business", new_business_path %>
+	                    </li>
+
+	                    <li>
+	                        <%= link_to "My Business", "/my_business" %>
 	                    </li>
 
 	                    <%- if current_user %>
