--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,18 @@
 	                    		<%= link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %>
 	                    	</li>
 
-	                    	<li>
+	                    	
 	                    		<%- if info_exist %>
-	                    			<%= link_to "User Information", user_info_path(current_user.id) %>
+	                    			<li>
+	                    				<%= link_to "User Information", user_info_path(current_user.id) %>
+	                    			</li>
+	                    			
 	                    		<% else %>
-	                    			<% link_to "Create User Information", new_user_info %>
+	                    			<li>
+	                    				<%= link_to "Create User Information", new_user_info_path(current_user.id) %>
+	                    			</li>
 	                    		<% end %>
-	                    	</li>
+	                    	
 	                    <% else %>
 		                    <li>
 		                   		<%= link_to "Login", new_user_session_path %>
