--- a/app/assets/stylesheets/business.scss
+++ b/app/assets/stylesheets/business.scss
@@ -12,22 +12,38 @@
 	font-family: sans-serif;
 	font-size: 20px;
 
-	display: inline-block
+	display: flex;
+    align-items: center;
 }
 
 .business_pic_holder{
 	float: left;
-	margin-top: 40px;
 	margin-left: 40px;
 }
 
 .business_image{
 	border-radius: 50%;
-	border: solid 3px orange;
+	border: solid 3px black;
+}
+
+.business_name_description_holder{
+	margin: auto;
+	margin-top: 50px;
+	height: 100px;
+	width: 200px;
 }
 
 .business_name{
-	margin : auto;
-	width: 40%;
+	float: left;
+}
+
+.business_description{
+	
+}
+
+.details_div{
+	float:right;
+	margin-right: 50px;
+	width: 60px;
 	height: 50px;
 }
