--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -5,7 +5,7 @@
 		</div>
 		<div class="business_name_description_holder">
 			<div class="business_name">
-				<%= x.name %>
+				<p> <%= x.name %> </p>
 			</div>
 			<div class="business_description">
 				<%= x.category %>
