--- a/app/assets/stylesheets/business.scss
+++ b/app/assets/stylesheets/business.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the Business controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// BUSINESSES PAGE
+
 .business{
 	width: 70%;
 	height: 160px;
@@ -29,19 +32,22 @@
 
 .business_name_description_holder{
 	margin: auto;
-	margin-top: 50px;
 	height: 100px;
 	width: 200px;
 
 
 	.business_name{
-		
 		float: left;
 		width: 100%;
+		h2{
+			float: left;
+		}
 	}
 
 	.business_description{
-	  bottom: 0;
+		float: left;
+		bottom: 0;
+		font-size: 11px;
 	}
 }
 
@@ -50,4 +56,89 @@
 	margin-right: 50px;
 	width: 60px;
 	height: 50px;
+}
+
+
+// SHOW PAGE
+
+.business_master{
+	width: 60%;
+	margin: auto;
+	border: solid 5px #9dc4a2;
+	border-radius: 10px;
+	
+	font-family: sans-serif;
+	font-size: 20px;
+}
+
+.business_image_large{
+	border-radius: 50%;
+	border: solid 5px black;
+	margin-bottom: 20px;
+}
+
+.appointment_form_holder{
+	width: 60%;
+	margin: auto;
+	margin-top: -5px;
+	border: dashed 5px #9dc4a2;
+	border-radius: 10px;
+	padding-top: 10px;
+	input{
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+}
+
+.comment_maker{
+	margin-top: 15px;
+	margin-bottom: 20px;	
+}
+
+#comment_content{
+	display: block;
+	margin: auto;
+	width: 45%;
+	height: 60px;
+	font-family: sans-serif;
+	font-size: 20px;
+	border-radius: 10px;
+	padding: 10px;
+	outline: none;
+  	border: solid 5px #9dc4a2;
+  	transition: box-shadow 0.7s, border 0.7s;
+}
+#comment_content:focus {
+	border: solid 5px #94e09d;
+}
+
+.comments_holder{
+	h3{
+		margin-bottom: 20px;
+		margin-top: 30px;
+		font-size: 20px;
+	}
+}
+
+.comment{
+	width: 50%;
+	border-bottom: solid 1px #9dc4a2;
+	margin: auto;
+	margin-bottom: 4px;
+}
+
+.new_business_form_holder{
+	width: 60%;
+	margin: auto;
+	margin-top: -5px;
+	border: dashed 5px #9dc4a2;
+	border-radius: 10px;
+	padding-top: 10px;
+	input{
+		margin-top: 10px;
+		margin-bottom: 10px;
+		margin: auto;
+	}
+	padding-bottom: 30px;
+	margin-bottom: 100px;
 }
