--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -19,7 +19,7 @@
 			<br>
 			<%= f.label "How much do you charge?" %>
 			<br>
-			<%= f.text_area :price %>
+			<%= f.number_field :price %>
 			<%= f.hidden_field :user_id, :value => current_user.id %>
 			<br>
 			<%= f.label "Please add an image for you business profile!" %>
